--- a/services/users/package.json
+++ b/services/users/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node src/server.js",
-    "start-dev": "./node_modules/nodemon/bin/nodemon.js src/server.js",
+    "dev": "./node_modules/nodemon/bin/nodemon.js src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Niclas Söderkvist",
@@ -17,7 +17,7 @@
     "express": "^4.16.2",
     "express-jwt-verify": "^1.0.1",
     "jsonwebtoken": "^8.1.0",
-    "mongodb": "^3.0.0-rc0",
+    "mongodb": "^2.2.33",
     "mongoose": "^4.13.7",
     "mongoose-unique-validator": "^1.0.6"
   },
