--- a/services/kanban/package.json
+++ b/services/kanban/package.json
@@ -1,20 +1,23 @@
 {
   "name": "kanban",
   "version": "1.0.0",
-  "description": "Kanban board",
-  "main": "index.js",
+  "description": "Kanban service",
+  "main": "server.js",
   "scripts": {
+    "start": "node src/server.js",
+    "dev": "./node_modules/nodemon/bin/nodemon.js src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Niclas Söderkvist",
   "license": "ISC",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-jwt-verify": "^1.0.1",
-    "mongodb": "^3.0.0-rc0"
+    "mongodb": "^2.2.33",
+    "mongoose": "^4.13.7",
+    "mongoose-unique-validator": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.1.2",
