--- a/services/web/package.json
+++ b/services/web/package.json
@@ -17,7 +17,8 @@
     "buefy": "^0.6.2",
     "chunk": "0.0.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuedraggable": "^2.16.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
