--- a/services/kanban/package.json
+++ b/services/kanban/package.json
@@ -2,7 +2,7 @@
   "name": "kanban",
   "version": "1.0.0",
   "description": "Kanban service",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
     "dev": "./node_modules/nodemon/bin/nodemon.js src/server.js",
