--- a/services/web/package.json
+++ b/services/web/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.17.1",
     "buefy": "^0.6.2",
     "chunk": "0.0.2",
+    "socket.io-client": "^2.0.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.16.0"
