--- a/services/users/package.json
+++ b/services/users/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^8.1.0",
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.7",
-    "mongoose-unique-validator": "^1.0.6"
+    "mongoose-unique-validator": "^1.0.6",
+    "nyc": "^11.4.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
