--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,17 @@ services:
             - 27018:27018
         command: mongod --port 27018
 
+    mongodb-test:
+        image: mongo:3.4
+        environment:
+            - MONGO_DATA_DIR=/data/testdb
+        volumes:
+            - ./data/testdb:/data/testdb
+        ports:
+            - 3010:3010
+        command: mongod --port 3010
+
+
     webdev:
         image: node:8.9-alpine
         ports:
