--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
   "description": "Kanban Board Project (final project for ramverk2 @ BTH)",
   "main": "index.js",
   "scripts": {
+    "start": "npm run start-docker",
+    "stop": "docker-compose down",
+    "pretest": "export DBWEBB_DSN=mongodb://localhost:3010/testkanban && docker-compose up -d mongodb-test",
     "test": "nyc --all --reporter=html --reporter=text mocha --exit --reporter=spec tests/**/*.js",
+    "posttest": "docker-compose down && npm run lint",
     "pretest-users": "export DBWEBB_DSN=mongodb://localhost:3010/testkanban",
     "test-users": "nyc --all --reporter=html --reporter=text mocha --exit --reporter=spec tests/users-test/*.js",
     "pretest-kanban": "export DBWEBB_DSN=mongodb://localhost:3010/testkanban",
     "test-kanban": "nyc --all --reporter=html --reporter=text mocha --exit --reporter=spec tests/kanban-test/*.js",
     "test-realtime": "mocha tests/realtime-test/*.js",
     "test-web": "echo \"testweb - Nothing specified\" && exit 0",
-    "posttest": "npm run lint",
     "postinstall": "(cd ./services/kanban/ && npm install);(cd ./services/users/ && npm install);(cd ./services/realtime/ && npm install);(cd ./services/web/ && npm install)",
     "lint": "npm run lint-users && npm run lint-kanban && npm run lint-realtime && npm run lint-web",
     "lint-users": "./node_modules/.bin/eslint --config .eslintrc.json \"services/users/**\"",
     "lint-kanban": "./node_modules/.bin/eslint --config .eslintrc.json \"services/kanban/**\"",
     "lint-realtime": "./node_modules/.bin/eslint --config .eslintrc.json \"services/realtime/**\"",
     "lint-web": "(cd ./services/web/ && npm run lint)",
-    "scrutinizer": "nyc --all --reporter=clover mocha --exit --reporter=spec tests/**/*.js"
+    "scrutinizer": "nyc --all --reporter=clover mocha --exit --reporter=spec tests/**/*.js",
+    "start-docker": ". \"./setports.sh\" && (cd services/web && npm run build) && docker-compose up mongodb user kanban realtime webprod",
+    "stop-docker": "docker-compose down",
+    "test-docker": "docker-compose up test1",
+    "test-docker1": "docker-compose up test3",
+    "test-docker2": "echo \"Docker 6 does not work, skipping\"",
+    "test-all-docker": "nyc --all --reporter=html --reporter=text mocha --exit --reporter=spec tests/**/*.js"
   },
   "author": "Niclas Söderkvist",
   "license": "ISC",
