--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "npm run start-docker",
     "stop": "docker-compose down",
-    "pretest": "export DBWEBB_DSN=mongodb://localhost:3010/testkanban && docker-compose up -d mongodb-test",
-    "test": "nyc --all --reporter=html --reporter=text mocha --exit --reporter=spec tests/**/*.js",
-    "posttest": "docker-compose down && npm run lint",
+    "pretest": "docker-compose up -d mongodb-test",
+    "test": "DBWEBB_DSN=\"mongodb://localhost:3010/kanban\" nyc --all --reporter=html --reporter=text mocha --exit --reporter=spec tests/**/*.js",
+    "posttest": "docker-compose stop mongodb-test && npm run lint",
     "pretest-users": "export DBWEBB_DSN=mongodb://localhost:3010/testkanban",
     "test-users": "nyc --all --reporter=html --reporter=text mocha --exit --reporter=spec tests/users-test/*.js",
     "pretest-kanban": "export DBWEBB_DSN=mongodb://localhost:3010/testkanban",
@@ -36,12 +36,13 @@
     "chai-http": "^3.0.0",
     "codecov": "^3.0.0",
     "coveralls": "^3.0.0",
+    "cross-env": "^5.1.3",
     "eslint": "^4.10.0",
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-chai-friendly": "^0.4.0",
+    "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.5.1",
-    "eslint-plugin-json": "^1.2.0",
     "jsonlint": "^1.6.2",
     "jsonwebtoken": "^8.1.0",
     "mocha": "^4.0.1",
