--- a/services/users/package.json
+++ b/services/users/package.json
@@ -21,8 +21,7 @@
     "jsonwebtoken": "^8.1.0",
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.7",
-    "mongoose-unique-validator": "^1.0.6",
-    "nyc": "^11.4.1"
+    "mongoose-unique-validator": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -30,6 +29,7 @@
     "eslint-plugin-react": "^7.5.1",
     "mocha": "^4.0.1",
     "nodemon": "^1.14.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "nyc": "^11.4.1"
   }
 }
